# Tester

./: PreguntasSTI.txt  README.md  preguntas.sh  tester.sh
Preguntas/VariasOpciones/Redes/: Semana0704.txt  Semana1003.txt  Semana1703.txt  Semana2104.txt  Semana2403.txt  Semana3103.txt
Preguntas/VariasOpciones/SSOO/: Conceptos generales.txt  Procesos.txt
Preguntas/VerdaderoFalso/SSOO/: Procesos.txt
Preguntas/VerdaderoFalso/STI/: Tema4STI.txt  Tema5STI.txt  Tema6STI.txt
SSOO/: Conceptos generales.txt
STI/: ExamenesPasados.txt  Tema1STI.txt  Tema2STI.txt  Tema3STI.txt  Tema4STI.txt  Tema5STI.txt  Tema6STI.txt
escriba/: pyproject.toml
escriba/src/: main.py
escriba/src/utils/: functions.py
testerC++/: Abcd.cpp  Abcd.h  CMakeLists.txt  Pregunta.h  Tester.cpp  Tester.h  VerdaderoFalso.h  diagrama.puml  main.cpp  prueba.txt  prueba2
